--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,9 +27,34 @@
         align-items: center;
         justify-content: center;
         height: 100%;
-        width: 50%;
+        width: 60%;
         gap: 1rem;
         overflow: hidden;
+        border: 1px solid #ccc;
+        margin: 0.25rem;
+        position: relative;
+
+        .buttons {
+            height: 32px;
+            width: 64px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            display: flex;
+            gap: 0.5rem;
+
+
+            .button-zoom {
+                background-color: #ccc;
+                height: 100%;
+                width: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 16px;
+                cursor: pointer;
+            }
+        }
 
         @media (max-width:768px) {
             width: 100vw;
@@ -50,7 +75,7 @@
     }
 
     .table-container {
-        width: 50%;
+        width: 40%;
         height: 100%;
         background-color: #fff;
 
@@ -58,14 +83,20 @@
             width: 100%;
             display: flex;
             flex-direction: column-reverse;
-            
+
         }
 
         .table-content {
             padding: 1rem 0.25rem;
             height: 50%;
             overflow-y: scroll;
-         
+
+            h2 {
+                width: 100%;
+                text-align: start;
+                padding: 0 1rem;
+            }
+
         }
 
     }
